bk_ida/gccida/c3/df_insn_refs_unlink
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_insn_refs_unlink/src/df.c:2822:12: error: expected expression
*( _OWORD *)&df_0->insns[v4].defs = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_insn_refs_unlink/src/df.c:2822:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&df_0->insns[v4].defs = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_insn_refs_unlink/src/obj/df.o] Error 1
